# core

./: .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  LICENSE  NOTICE  README.md  RELEASE-v0.1.2-alpha.md  TESTING.md  WHATS_NEW.md  anvo-core.doxygen.in  core_net.version.in  empty_contract.wasm  package.cmake
libraries/: CMakeLists.txt
libraries/chain/: CMakeLists.txt  abi_serializer.cpp  apply_context.cpp  asset.cpp  authority.cpp  authorization_manager.cpp  block.cpp  block_handle.cpp  block_header.cpp  block_header_state.cpp  block_header_state_legacy.cpp  block_log.cpp  block_state.cpp  block_state_legacy.cpp  chain_config.cpp  chain_id_type.cpp  config.cpp  controller.cpp  deep_mind.cpp  finality_core.cpp  finalizer.cpp  fork_database.cpp  genesis_intrinsics.cpp  genesis_state.cpp  genesis_state_root_key.cpp.in  hs_pseudo  name.cpp  peer_keys_db.cpp  platform_timer_accuracy.cpp  platform_timer_asio_fallback.cpp  platform_timer_kqueue.cpp  platform_timer_posix.cpp  producer_schedule.cpp  protocol_feature_activation.cpp  protocol_feature_manager.cpp  protocol_state_object.cpp  qc.cpp  resource_limits.cpp  snapshot.cpp  snapshot_scheduler.cpp  (+15 more)
libraries/chain/webassembly/: action.cpp  authorization.cpp  cf_system.cpp  cf_transaction.cpp  compiler_builtins.cpp  console.cpp  context_free.cpp  crypto.cpp  database.cpp  memory.cpp  permission.cpp  privileged.cpp  producer.cpp  softfloat.cpp  system.cpp  transaction.cpp
libraries/chain/webassembly/runtimes/: core-vm-oc.cpp  core-vm.cpp  eos-vm-oc.cpp  eos-vm.cpp
libraries/chaindb/include/chainbase/: pagemap_accessor.hpp
libraries/chaindb/src/: pinnable_mapped_file.cpp
libraries/cli11/: CMakeLists.txt
libraries/core-vm/: .clang-format  CMakeLists.txt
libraries/core-vm/tests/: CMakeLists.txt  allow_code_after_function_end_tests.cpp  allow_invalid_empty_local_set_tests.cpp  host_functions_tests.cpp  instantiation_tests.cpp  max_memory_offset_tests.cpp  max_mutable_globals_tests.cpp  null_tests.cpp  parse_tests.cpp  signals_tests.cpp  utils.hpp  watchdog_tests.cpp
libraries/core-vm/tests/fuzz/: CMakeLists.txt  fuzz_parser.cpp
libraries/core-vm/tests/memory_tests/: CMakeLists.txt
libraries/core-vm/tests/spec/: br_table_tests.cpp  call_indirect_tests.cpp  conversions_tests.cpp  e_block_tests.cpp  e_function_tests.cpp  e_module_tests.cpp  f32_cmp_tests.cpp  forward_tests.cpp  func_ptrs_tests.cpp  i64_tests.cpp  left-to-right_tests.cpp  load_tests.cpp  local_tee_tests.cpp  memory_grow_tests.cpp  memory_size_tests.cpp  names_tests.cpp  nop_tests.cpp  select_tests.cpp  traps_tests.cpp  typecheck_tests.cpp  utf8-import-field_tests.cpp  utf8-import-module_tests.cpp
libraries/core-vm/tests/spec_test_generator/: spec_test_generator.cpp
libraries/core-vm/tools/: CMakeLists.txt  bench_interp.cpp  hello.wasm.hpp  hello_driver.cpp  interp.cpp
libraries/custom_appbase/tests/: custom_appbase_tests.cpp
libraries/eos-vm/: CMakeLists.txt
libraries/eos-vm/tests/: CMakeLists.txt  allocator_tests.cpp  allow_u32_limits_flags_tests.cpp  allow_zero_blocktype_tests.cpp  backend_tests.cpp  core_net_max_nested_structures_tests.cpp  forbid_export_mutable_globals_tests.cpp  guarded_ptr_tests.cpp  host_functions_tests.cpp  implementation_limits_tests.cpp  instantiation_tests.cpp  main.cpp  max_br_table_elements_tests.cpp  max_code_bytes_tests.cpp  max_func_local_bytes_tests.cpp  max_linear_memory_init_tests.cpp  max_local_sets_tests.cpp  max_nested_structures_tests.cpp  max_pages_tests.cpp  max_section_elements_tests.cpp  max_table_elements_tests.cpp  preconditions_tests.cpp  reentry_tests.cpp  signals_tests.cpp  stack_restriction_tests.cpp  variant_tests.cpp  varint_tests.cpp  vector_tests.cpp  wasm_config.hpp.in
libraries/eos-vm/tests/fuzz/: fuzz_driver.cpp  fuzz_parser.cpp
libraries/eos-vm/tests/memory_tests/: growable_allocator_test.cpp
libraries/eos-vm/tests/spec/: address_tests.cpp  align_tests.cpp  binary-leb128_tests.cpp  binary_tests.cpp  block_tests.cpp  br_if_tests.cpp  br_tests.cpp  break-drop_tests.cpp  call_tests.cpp  const_tests.cpp  custom_tests.cpp  data_tests.cpp  e_globals_tests.cpp  e_locals_tests.cpp  e_memory_tests.cpp  e_table_tests.cpp  elem_tests.cpp  endianness_tests.cpp  f32_bitwise_tests.cpp  f32_tests.cpp  f64_bitwise_tests.cpp  f64_cmp_tests.cpp  f64_tests.cpp  fac_tests.cpp  float_exprs_tests.cpp  float_literals_tests.cpp  float_memory_tests.cpp  float_misc_tests.cpp  func_tests.cpp  globals_tests.cpp  i32_tests.cpp  if_tests.cpp  int_exprs_tests.cpp  int_literals_tests.cpp  labels_tests.cpp  local_get_tests.cpp  local_set_tests.cpp  loop_tests.cpp  memory_redundancy_tests.cpp  memory_tests.cpp  (+11 more)
libraries/eos-vm/tools/: addr2line.cpp  bench_interp.cpp  hello.wasm.hpp  hello_driver.cpp  interp.cpp
libraries/libfc/: CMakeLists.txt
libraries/libfc/include/fc/: utility.hpp
libraries/libfc/libraries/boringssl/: CMakeLists.txt
libraries/libfc/src/: exception.cpp  uint128.cpp  variant.cpp
libraries/libfc/src/crypto/: _elliptic_impl_priv.hpp  aes.cpp  base58.cpp  bls_private_key.cpp  city.cpp  elliptic_impl_priv.cpp  elliptic_r1.cpp  elliptic_secp256k1.cpp  elliptic_webauthn.cpp  private_key.cpp  public_key.cpp  ripemd160.cpp  sha1.cpp  sha512.cpp  signature.cpp
libraries/libfc/src/io/: json.cpp
libraries/libfc/src/log/: log_message.cpp
libraries/libfc/src/network/: url.cpp
libraries/libfc/test/: CMakeLists.txt  test_uint128.cpp
libraries/libfc/test/crypto/: test_cypher_suites.cpp  (+1 more)
libraries/state_history/: CMakeLists.txt  abi.cpp  create_deltas.cpp  trace_converter.cpp
libraries/testing/: CMakeLists.txt  contracts.cpp.in  contracts.hpp.in  tester.cpp  tester_network.cpp
libraries/testing/contracts/: CMakeLists.txt
libraries/version/src/: version.cpp  version_impl.cpp.in  version_impl.hpp
plugins/trace_api_plugin/utils/: CMakeLists.txt  compress_cmd.cpp  trace_api_util.cpp
tests/PerformanceHarness/: CMakeLists.txt  README.md  __init__.py  performance_test_basic.py
tests/PerformanceHarness/CorePluginArgs/: CMakeLists.txt  generate_core_netd_plugin_args_class_files.py
(+778 files in other folders)
